bonus/conf/gitlab/gitlab.yml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: gitlab-deployment
spec:
  replicas: 1

  selector:
    matchLabels:
      app: gitlab-pod

  template:
    metadata:
      labels:
        app: gitlab-pod

    spec:
      containers:
      - name: gitlab
        image: gitlab/gitlab-ce
        ports:
        - name: http
          containerPort: 80

---

apiVersion: v1

kind: Service
metadata:
  name: gitlab-service
spec:
  selector:
    app: gitlab-pod
  ports:
  - name: http
    port: 80
    protocol: TCP
